--- a/css/style-login.css
+++ b/css/style-login.css
@@ -3,3 +3,36 @@
     padding: 0;
     font-family: Glory, sans-serif, Calibri;
 }
+/*Containers*/
+.main-container{
+    width: 800px;
+    height: 500px;
+    border: solid 1px black;
+    position: relative;
+    margin: auto;
+    margin-top: 75px;
+    display: flex;
+    flex-direction: column;
+}
+.container-header-flex header{
+    text-align: center;
+    padding: 15px;
+    margin: 10px;
+}
+.container-form-flex{
+    width: 100%;
+    height: 250px;
+    position: relative;
+    text-align: center;
+}
+#form-flex__input{
+    width: 50%;
+    padding: 5px;
+    margin: 3px;
+}
+#form-flex__submit{
+    width: 50%;
+    padding: 5px;
+    margin: 3px;
+}
+/*etiquetas / atributos*/
