--- a/css/style-login.css
+++ b/css/style-login.css
@@ -1,39 +1,64 @@
-/*Containers*/
-
-.main-container {
-    width: 800px;
-    height: 500px;
-    border: solid 1px black;
-    position: relative;
-    margin: auto;
-    margin-top: 75px;
-    display: flex;
-    flex-direction: column;
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Koh Santepheap', cursive;
 }
-
-.container-header-flex header {
-    text-align: center;
-    padding: 15px;
-    margin: 10px;
-}
-
-.container-form-flex {
+@media only screen and (min-width: 0px) and (max-width: 350px){
+    .container-flex-nav{
+        background: rgb(11, 23, 31);
+        width: 100%;
+        height: 45px;
+        border: 1px solid black;
+        display: inline-block;
+        display: flex;
+        align-items: center;
+        padding: 0px 4px;
+    }
+    .flex-items{
+        margin: 0px 5px;
+    }
+    .menu{
+        position: absolute;
+        right: 0;
+        margin: 0px 5px; 
+    }
+    menu:hover{
+        color: yellow;
+    }
+    i{
+        color: #fff;
+    }
+    h1{
+        font-size: 20px;
+        color: #fff;
+    }
+  }
+/**
+.container-flex-nav{
+    background: rgb(11, 23, 31);
     width: 100%;
-    height: 250px;
-    position: relative;
-    text-align: center;
+    height: 45px;
+    border: 1px solid black;
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    padding: 0px 4px;
 }
-
-#form-flex__input {
-    width: 50%;
-    padding: 5px;
-    margin: 3px;
+.flex-items{
+    margin: 0px 5px;
 }
-
-#form-flex__submit {
-    width: 50%;
-    padding: 5px;
-    margin: 3px;
+.menu{
+    position: absolute;
+    right: 0;
+    margin: 0px 5px; 
 }
-
-/*etiquetas / atributos*/
+.amarillo:hover{
+    color: yellow;
+}
+i{
+    color: #fff;
+}
+h1{
+    font-size: 20px;
+    color: #fff;
+}*/
